change structure so it look simple
